--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "author": "Pavel Shramov",
   "name": "leaflet-plugins",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Miscellaneous plugins for Leaflet library for services that need to display route information and need satellite imagery from different providers",
   "repository": {
     "type": "git",
-    "url": "git@github.com:lushchick/leaflet-plugins.git"
+    "url": "git@github.com:shramov/leaflet-plugins.git"
   },
   "contributors": [
     "Andrey Lushchick <andrew@lushchick.org>"
