--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "author": "Pavel Shramov",
   "name": "leaflet-plugins",
-  "version": "0.0.2",
+  "version": "1.0.1",
   "description": "Miscellaneous plugins for Leaflet library for services that need to display route information and need satellite imagery from different providers",
   "repository": {
     "type": "git",
     "url": "git@github.com:shramov/leaflet-plugins.git"
   },
   "contributors": [
+    "Bruno Bergot <bruno@eliaz.fr>",
     "Andrey Lushchick <andrew@lushchick.org>"
   ],
   "keywords": [
