--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "leaflet",
+  "name": "leaflet-plugins",
   "version": "1.2.1",
   "description": "Plugins for Leaflet library",
   "main": [
