--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Pavel Shramov",
   "name": "leaflet-plugins",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Miscellaneous plugins for Leaflet library for services that need to display route information and need satellite imagery from different providers",
   "repository": {
     "type": "git",
@@ -14,8 +14,7 @@
     "jshint": "2.5.0"
   },
   "contributors": [
-    "Bruno Bergot <bruno@eliaz.fr>",
-    "Andrey Lushchick <andrew@lushchick.org>"
+    "Bruno Bergot <bruno@eliaz.fr>"
   ],
   "keywords": [
     "leaflet",
