--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "leaflet-plugins",
   "version": "1.3.3",
   "homepage": "https://github.com/shramov/leaflet-plugins/",
+  "license": "MIT",
   "authors": [
     "brunob <brunobergot@gmail.com>",
     "Pavel Shramov"
