--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "leaflet-plugins",
   "version": "1.3.3",
   "description": "Miscellaneous plugins for Leaflet library for services that need to display route information and need satellite imagery from different providers",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git@github.com:shramov/leaflet-plugins.git"
