--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "author": "Pavel Shramov",
   "name": "leaflet-plugins",
   "version": "1.3.9",
+  "main": "layer/index.js",
   "description": "Miscellaneous plugins for Leaflet library for services that need to display route information and need satellite imagery from different providers",
   "license": "MIT",
   "repository": {
@@ -26,5 +27,8 @@
     "yandex",
     "kml",
     "gpx"
-  ]
+  ],
+  "dependencies": {
+    "leaflet": "^0.7.3"
+  }
 }
