Add topojson vector feature
Use the [topojson library](https://github.com/mbostock/topojson) from
[Mike Bostock](https://github.com/mbostock)

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "layer/vector/GPX.Speed.js",
     "layer/vector/KML.js",
     "layer/vector/OSM.js",
+    "layer/vector/TOPOJSON.js",
     "layer/tile/Bing.js",
     "layer/tile/Google.js",
     "layer/tile/Yandex.js"
