--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "url": "git@github.com:shramov/leaflet-plugins.git"
   },
   "scripts": {
-    "test": "eslint --config .eslintrc control/* layer/*"
+    "test": "./node_modules/.bin/karma start && npm run lint",
+    "lint": "eslint --config .eslintrc control/* layer/*"
   },
   "devDependencies": {
-    "eslint": "2.3.0"
+    "chai": "3.X",
+    "eslint": "2.3.0",
+    "karma": "1.X",
+    "karma-chai": "0.1.X",
+    "karma-mocha": "1.X",
+    "karma-mocha-reporter": "2.X",
+    "karma-phantomjs-launcher": "1.X",
+    "leaflet": "0.7.X",
+    "mocha": "2.X"
   },
   "contributors": [
     "Bruno Bergot <bruno@eliaz.fr>"
