Fix decoding URI-encoded permalink parameters
decodeURI() only decodes characters that are encoded by encodeURI(), as
a consequence character such as comas were not decoded in permalink
parameters.

issue #237

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "url": "git@github.com:shramov/leaflet-plugins.git"
   },
   "scripts": {
-    "test": "eslint --config .eslintrc control/* layer/*"
+    "test": "tap control/test/*.js && eslint --config .eslintrc control/* layer/*"
   },
   "devDependencies": {
-    "eslint": "2.3.0"
+    "eslint": "2.3.0",
+    "tap": "^6.3.2"
   },
   "contributors": [
     "Bruno Bergot <bruno@eliaz.fr>"
